--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -80,14 +80,14 @@
          <p>Med engang bestillingen er fullført, så sender vi det videre til våres designere som starter å lage designen. Du vil mota en mail gjennom alle stegene</p>
       </div>
       <div class="class-2">
-         <h1>Designerne har fullført designen</h1>
+         <h1>Designen har blitt fullført</h1>
          <img src="{% static '/images/other/loading-bar-2.png' %}" alt="load-bar-2">
          <p>Da designen har blitt fullført, så blir designen sendt videre til våres utviklere, som starter å bygge nettsiden</p>
       </div>
       <div class="class-3">
          <h1>Nettsiden er ferdig bygget</h1>
          <img src="{% static '/images/other/loading-bar-3.png' %}" alt="load-bar-3">
-         <p>Da utviklerne våres har bygget ferdig nettsiden, så vil du mota en mail sånn at du kan sjekke om noe skal bli endres</p>
+         <p>Da utviklerne våres har bygget ferdig nettsiden, så vil du mota en mail sånn at du kan sjekke om noe skal endres</p>
       </div>
       <div class="class-4">
          <h1>Siste endringer blir gjort</h1>
