--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -9,6 +9,7 @@
     <base href="/">
     <link rel="stylesheet" href="{% static '/scss/userprofile/login.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static '/scss/userprofile/signup.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static '/scss/global.css' %}" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -31,7 +32,7 @@
     <style type="text/css">
         #navBarSpace{
             width: 100%;
-            height: 50px;
+            height: 60px;
             background: rgb(120, 144, 220);
         }
         #navbar{
