--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -107,17 +107,9 @@
             </div>
         </form>
     </div>
-    {% if cart %}
-    <a href="/handlekurv" class="cart active" id="cartNav">
+    <a href="/bestill" class="order" id="makeOrder">
         <i class="fab fa-opencart"></i>
-        <p>[[numItems]]</p>
     </a>
-    {% else %}
-    <a href="/handlekurv" class="cart" id="cartNav">
-        <i class="fab fa-opencart"></i>
-        <p>[[numItems]]</p>
-    </a>
-    {% endif %}
     <!-- DESKTOP -->
     <div class="desktop-menu">
         <ul class="desktop-ul">
