--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -5,4 +5,26 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.page-cover {
+  width: 100%;
+  height: auto;
+  background: #7890dc;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-cover h1 {
+  font-size: 24px;
+  color: #fafafa;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 /*# sourceMappingURL=global.css.map */
