--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -37,13 +37,8 @@
   display: block;
 }
 
-#navbar.sticky .cart i {
+#navbar.sticky .order i {
   color: black;
-}
-
-#navbar.sticky .cart p {
-  color: white;
-  background: #141414;
 }
 
 #navbar.menu-active {
@@ -64,6 +59,10 @@
 
 #navbar.menu-active .logo .logo2 {
   display: block;
+}
+
+#navbar.menu-active .order i {
+  color: black;
 }
 
 #navbar .desktop-menu {
@@ -311,45 +310,19 @@
   display: block;
 }
 
-#navbar .cart {
+#navbar .order {
   margin: 0;
   position: absolute;
-  right: 160px;
+  right: 105px;
   cursor: pointer;
-  opacity: 0;
-  -webkit-transition: all 0.6s ease-in;
-  transition: all 0.6s ease-in;
-  pointer-events: none;
 }
 
-#navbar .cart i {
+#navbar .order i {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   position: relative;
   color: white;
   font-size: 22px;
-}
-
-#navbar .cart p {
-  position: absolute;
-  top: -5px;
-  right: -6px;
-  background: whitesmoke;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding-right: 5px;
-  padding-left: 5px;
-  color: black;
-  border-radius: 40px;
-  font-size: 10px;
-  font-weight: bold;
-  margin: 0;
-  text-align: center;
-}
-
-#navbar .cart.active {
-  opacity: 1;
-  right: 105px;
-  margin-top: 1px;
-  pointer-events: visible;
 }
 
 @media only screen and (min-device-width: 1024px) {
