--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -30,7 +30,8 @@
             <li class="sidebar-li" id="sidebarLi">
                 <a onclick="prices()">Priser</a>
                 <a onclick="about()">Om oss</a>
-                <a onclick="info()">Info</a>
+                <a onclick="info()">Prosess</a>
+                <a onclick="window.location.href='/hosting-informasjon'">Hosting</a>
                 <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
@@ -107,9 +108,8 @@
             </div>
         </form>
     </div>
-    <a href="/bestill" class="order" id="makeOrder">
-        <i class="fab fa-opencart"></i>
-    </a>
+    <a href="/bestill" class="order" id="makeOrder">Bestill</a>
+    <!-- <i class="fab fa-opencart"></i> -->
     <!-- DESKTOP -->
     <div class="desktop-menu">
         <ul class="desktop-ul">
