--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,9 +1,18 @@
 // STANDARD PHONE
+.cover{
+  margin-top: -160px;
+  .cover-text{
+    img{
+      width: 85%;
+    }
+  }
+}
 .make-order{
     width: 100%;
     height: auto;
     padding: 10px 0;
     text-align: center;
+    background: white;
     form{
         text-align: left;
         padding: 10px;
