--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -6,11 +6,10 @@
           box-sizing: border-box;
 }
 
-.page-cover {
-  width: 100%;
-  height: auto;
-  background: #7890dc;
-  padding: 20px;
+.cover {
+  position: relative;
+  width: auto;
+  min-height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,11 +19,92 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: #7890dc;
 }
 
-.page-cover h1 {
+.cover img {
+  position: absolute;
+  left: 0;
+  top: 130px;
+  width: 100%;
+  height: auto;
+}
+
+.cover .cover-text {
+  -webkit-transform: translateY(-20px) translateX(0);
+          transform: translateY(-20px) translateX(0);
+  position: absolute;
+  text-align: left;
+  margin: 10px;
+  margin-top: 0;
+}
+
+.cover .cover-text h1 {
+  width: 100%;
   font-size: 24px;
   color: #fafafa;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.cover .cover-text p {
+  -webkit-transition: ease-in 1s;
+  transition: ease-in 1s;
+  color: #fafafa;
+  font-size: 16px;
+}
+
+.cover .cover-buttons {
+  text-align: left;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cover .cover-buttons a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 10px;
+  margin-right: 15px;
+  border-radius: 30px;
+  width: 130px;
+  font-size: 14px;
+  padding: 6px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  outline: none;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.cover .cover-buttons a:nth-child(1) {
+  border: 2px solid transparent;
+  background: #3e50af;
+  color: white;
+  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+}
+
+.cover .cover-buttons a:nth-child(2) {
+  background: transparent;
+  color: white;
+  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+  border: 2px solid white;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
 }
 /*# sourceMappingURL=global.css.map */
