--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -6,17 +6,75 @@
   }
 
 // STANDARD PHONE
-.page-cover{
-  width: 100%;
-  height: auto;
-  background: rgb(120, 144, 220);
-  padding: 20px;
+.cover{ 
+  position: relative;
+  width: auto;
+  min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  h1{
-    font-size: 24px;
-    color: rgb(250, 250, 250);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background: rgb(120, 144, 220);
+  img{
+    position: absolute;
+    left: 0;
+    top: 130px;
+    width: 100%;
+    height: auto;
+  }
+  .cover-text{
+    transform: translateY(-20px) translateX(0);
+    position: absolute;
+    text-align: left;
+    margin: 10px;
+    margin-top: 0;
+    h1{
+      width: 100%;
+      font-size: 24px;
+      color: rgb(250, 250, 250);
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    p{
+      transition: ease-in 1s;
+      color: rgb(250, 250, 250);
+      font-size: 16px;
+    }
+  }
+  .cover-buttons{
+    text-align: left;
+    transform: translateY(30px);
+    width: 100%;
+    display: flex;
+    a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      text-align: center;
+      margin-top: 10px;
+      margin-right: 15px;
+      border-radius: 30px;
+      width: 130px;
+      font-size: 14px;
+      padding: 6px;
+      transition: all .2s ease-in-out;
+      outline: none;
+      text-transform: uppercase;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      &:nth-child(1){
+        border: 2px solid transparent;
+        background: rgb(62, 80, 175);
+        color: white;
+        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+      }
+      &:nth-child(2){
+        background: transparent;
+        color: white;
+        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+        border: 2px solid white;
+        backdrop-filter: blur(20px);
+      }
+    }
+  }
 }
-} 
