--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -161,7 +161,7 @@ $primaryColor: #2d9cb3;
                     opacity: 0;
                     transition: all .5s ease-in-out;
                 }
-                :nth-child(4){
+                :nth-child(5){
                     border: 2px solid transparent;
                     background: rgb(72, 90, 185);
                     color: white;
@@ -182,6 +182,10 @@ $primaryColor: #2d9cb3;
                     :nth-child(4){
                         opacity: 1;
                         transition: all 1s ease-in-out 0.8s;
+                    }
+                    :nth-child(5){
+                        opacity: 1;
+                        transition: all 1s ease-in-out 1s;
                     }
                 }
             }
@@ -269,12 +273,12 @@ $primaryColor: #2d9cb3;
         position: absolute;
         right: 105px;
         cursor: pointer;
-        i{
-            transition: all 0.2s ease-in-out;
-            position: relative;
-            color: white;
-            font-size: 22px;
-        }
+        color: white;
+        background: rgb(62, 80, 175);
+        padding: 5px;
+        width: 75px;
+        text-align: center;
+        border-radius: 25px;
     }
 }
 // NORMAL DESKTOP
