--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -42,6 +42,21 @@
   padding: 3px;
 }
 
+.make-order form input#color {
+  width: 60px;
+  height: 35px;
+}
+
+.make-order form .order-products {
+  width: 150px;
+  padding: 3px;
+}
+
+.make-order form .order-hosting {
+  width: 150px;
+  padding: 3px;
+}
+
 .make-order form .form-actions {
   margin-top: 15px;
 }
