--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -47,8 +47,10 @@
    </div>
    <div class="border"></div>
 </div>
+
+<div id="productScrollTo" style="height: 60px; width: 100%;"></div>
 <div class="product-section" id="productHomePage">
-   <h1>Velg din plan</h1>
+   <h1>Hva passer deg?</h1>
    {% for product in products %}
    <div class="product-card">
       <div class="text">
@@ -71,6 +73,8 @@
    </div>
    <div class="border"></div>
 </div> -->
+
+<div id="proccessScrollTo" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1>Så enkelt er det</h1>
    <div class="content">
@@ -102,6 +106,8 @@
    </div>
    <div class="border"></div>
 </div>
+
+<div id="contactScrollTo" style="height: 60px; width: 100%;"></div>
 <div class="contact-us" id="contactUs">
    <h1>Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
