--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/order.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/order.js' %}" type="text/javascript"></script>
 
 <div class="cover">
     <div class="cover-text">
@@ -12,6 +13,15 @@
        <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
     </div>
  </div>
+<!-- 
+ <div class="load-wrapp">
+    <div class="load-2">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+  </div> -->
+
 <div class="make-order">
     <form method='post' enctype="multipart/form-data">
         {% csrf_token %}
@@ -41,14 +51,14 @@
         <br>
         <label for="email">Epost</label>
         <br>
-        <input type="text" id="email" name="email" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+        <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
         <br>
         <label for="message">Fortell oss om bedriften din</label>
         <br>
         <textarea id="message" name="message"></textarea>
         <br>
         <div class="form-actions">
-            <button type='submit'>Send</button>
+            <button onclick="orderLoading()" type='submit'>Send</button>
         </div>
     </form>
 </div>
