--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -460,6 +460,10 @@ html, body {
   text-align: center;
 }
 
+.contact-us.active form {
+  opacity: 1;
+}
+
 .contact-us h1 {
   font-size: 26px;
   color: #0f0f0f;
@@ -478,6 +482,9 @@ html, body {
   padding: 10px;
   margin: 15px;
   margin-top: 0;
+  opacity: 0;
+  -webkit-transition: all ease-in .5s;
+  transition: all ease-in .5s;
 }
 
 .contact-us form label {
