--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -78,9 +78,11 @@
   margin-top: 10px;
   margin-right: 15px;
   border-radius: 30px;
-  width: 130px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   font-size: 14px;
-  padding: 6px;
+  padding: 10px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   outline: none;
@@ -88,17 +90,6 @@
   font-family: 'Oswald', sans-serif;
   font-weight: 600;
   letter-spacing: 0.5px;
-}
-
-.cover .cover-buttons a:nth-child(1) {
-  border: 2px solid transparent;
-  background: #3e50af;
-  color: white;
-  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-}
-
-.cover .cover-buttons a:nth-child(2) {
   background: transparent;
   color: white;
   -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
@@ -106,5 +97,9 @@
   border: 2px solid white;
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
+}
+
+.cover .cover-buttons a:nth-child(1) {
+  background: #3c54a0;
 }
 /*# sourceMappingURL=global.css.map */
