--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -53,27 +53,22 @@
       margin-top: 10px;
       margin-right: 15px;
       border-radius: 30px;
-      width: 130px;
+      width: max-content;
       font-size: 14px;
-      padding: 6px;
+      padding: 10px;
       transition: all .2s ease-in-out;
       outline: none;
       text-transform: uppercase;
       font-family: 'Oswald', sans-serif;
       font-weight: 600;
       letter-spacing: 0.5px;
+      background: transparent;
+      color: white;
+      box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+      border: 2px solid white;
+      backdrop-filter: blur(20px);
       &:nth-child(1){
-        border: 2px solid transparent;
-        background: rgb(62, 80, 175);
-        color: white;
-        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-      }
-      &:nth-child(2){
-        background: transparent;
-        color: white;
-        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-        border: 2px solid white;
-        backdrop-filter: blur(20px);
+        background: rgb(60, 84, 160);
       }
     }
   }
