--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -19,6 +19,9 @@
 
 #navbar.sticky {
   background: white;
+  -webkit-box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.7);
+          box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.7);
+  border-color: transparent;
 }
 
 #navbar.sticky .hamburger span {
@@ -98,9 +101,9 @@
   position: absolute;
   right: 15px;
   height: auto;
-  border-radius: 20px;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+  border-radius: .5em;
 }
 
 #navbar .hamburger span {
@@ -127,7 +130,7 @@
 }
 
 #navbar .hamburger.click {
-  background: rgba(210, 210, 210, 0.5);
+  border: 1px solid #485ab9;
 }
 
 #navbar .hamburger.click .upper-span {
@@ -153,12 +156,20 @@
   z-index: 10;
   background: white;
   width: 65%;
-  height: 700px;
+  height: 100vh;
   position: absolute;
   top: 60px;
   right: -65%;
   -webkit-transition: all .7s ease-in-out;
   transition: all .7s ease-in-out;
+}
+
+#navbar .sidebar img {
+  position: absolute;
+  right: 0;
+  bottom: 15px;
+  width: auto;
+  height: auto;
 }
 
 #navbar .sidebar .sidebar-ul {
@@ -179,9 +190,7 @@
   text-decoration: none;
   width: 60%;
   font-size: 18px;
-  margin: 30px;
-  margin-left: 0;
-  margin-right: 0;
+  margin: 25px auto;
   padding: 5px;
   opacity: 0;
   -webkit-transition: all .5s ease-in-out;
