--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -15,6 +15,8 @@ $primaryColor: #2d9cb3;
     border-bottom: 1px solid rgba(200, 200, 200, 0.7);
     &.sticky{
         background: white;
+        box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.7);
+        border-color: transparent;
         .hamburger{
             span{
                 background: black;
@@ -93,8 +95,8 @@ $primaryColor: #2d9cb3;
         position: absolute;
         right: 15px;
         height: auto;
-        border-radius: 20px;
         transform: rotate(180deg);
+        border-radius: .5em;
         span{
             display: block;
             width: 20px;
@@ -114,7 +116,7 @@ $primaryColor: #2d9cb3;
             width: 16px;
         }
         &.click{
-            background: rgba(210, 210, 210, 0.5);
+            border: 1px solid rgb(72, 90, 185);
             .upper-span{
                 margin-bottom: -2px;
                 transform: rotate(45deg);
@@ -135,11 +137,18 @@ $primaryColor: #2d9cb3;
         z-index: 10;
         background: rgb(255, 255, 255);
         width: 65%;
-        height: 700px;
+        height: 100vh;
         position: absolute;
         top: 60px;
         right: -65%;
         transition:  all .7s ease-in-out;
+        img{
+            position: absolute;
+            right: 0;
+            bottom: 15px;
+            width: auto;
+            height: auto;
+        }
         .sidebar-ul{
             position: relative;
             width: 100%;
@@ -154,9 +163,7 @@ $primaryColor: #2d9cb3;
                     text-decoration: none;
                     width: 60%;
                     font-size: 18px;
-                    margin: 30px;
-                    margin-left: 0;
-                    margin-right: 0;
+                    margin: 25px auto;
                     padding: 5px;
                     opacity: 0;
                     transition: all .5s ease-in-out;
