--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -58,7 +58,7 @@
         <textarea id="message" name="message"></textarea>
         <br>
         <div class="form-actions">
-            <button onclick="orderLoading()" type='submit'>Send</button>
+            <button onclick="orderLoading()" name="order" value="order" type='submit'>Send</button>
         </div>
     </form>
 </div>
