--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -1,7 +1,3 @@
-#navbarUpperSpace {
-  position: relative;
-}
-
 #navbar {
   background: transparent;
   z-index: 100000;
@@ -247,6 +243,12 @@
   position: absolute;
   right: 60px;
   cursor: pointer;
+  padding: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: .5em;
+  pointer-events: visible;
+  border: 1px solid transparent;
 }
 
 #navbar .my-account-icon i {
@@ -254,6 +256,11 @@
   font-size: 22px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+
+#navbar .my-account-icon.active {
+  border-color: #485ab9;
+  pointer-events: none;
 }
 
 #navbar .login-signup {
