--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -14,8 +14,8 @@
       <h1>Moderne nettsider til lave priser</h1>
       <p id="coverText2">Bli synlig på nett og ta neste steg for ditt bedrift, ved hjelp av våres fantastiske og moderne nettsider laget av Norges beste designere og utviklere</p>
       <div class="cover-buttons">
-         <a href="">Se priser</a>
-         <a href="">Kontakt oss</a>
+         <a onclick="coverPrices()" style="color: white;">Se priser</a>
+         <a onclick="coverContact()" style="color: white;">Kontakt oss</a>
       </div>
    </div>
 </div>
@@ -48,7 +48,7 @@
    <div class="border"></div>
 </div>
 
-<div id="productScrollTo" style="height: 60px; width: 100%;"></div>
+<div id="productScrollTo" style="height: 60px; width: 100%; background: white;"></div>
 <div class="product-section" id="productHomePage">
    <h1>Hva passer deg?</h1>
    {% for product in products %}
@@ -74,7 +74,7 @@
    <div class="border"></div>
 </div> -->
 
-<div id="proccessScrollTo" style="height: 60px; width: 100%;"></div>
+<div id="proccessScrollTo" style="height: 60px; width: 100%; background: white;"></div>
 <div class="proccess" id="info">
    <h1>Så enkelt er det</h1>
    <div class="content">
@@ -107,7 +107,7 @@
    <div class="border"></div>
 </div>
 
-<div id="contactScrollTo" style="height: 60px; width: 100%;"></div>
+<div id="contactScrollTo" style="height: 60px; width: 100%; background: white;"></div>
 <div class="contact-us" id="contactUs">
    <h1>Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
@@ -129,46 +129,4 @@
       </div>
    </form>
 </div>
-{% endblock %}
-
-{% block scripts %}
-<script>
-   const productHomePage = new Vue({
-      el: '#productHomePage',
-      delimeters: ['[[', ']]'],
-      store: store,
-      
-      methods: {
-         addToCart(product_id) {
-            console.log('Product_id', product_id);
-
-            const data = {
-               'product_id': product_id, 
-               'update': false,
-               'quantity': 1
-         };
-
-            fetch('/api/add_to_cart/', {
-               method: 'POST',
-               headers: {
-                  'Content-Type': 'application/json',
-                  'X-CSRFToken': '{{ csrf_token }}'
-               },
-               credentials: 'same-origin',
-               body: JSON.stringify(data)
-            }) 
-            .then((response) =>{
-               console.log(response)
-               
-               store.commit('increment', 1);
-
-            })
-            .catch(function (error) {
-               console.log('Error 2');
-               console.log(error);
-            })
-         }
-      }
-   });
-</script>
 {% endblock %}
